fix: add logic to other handlers
