# handler/response.go
@@ -44,3 +44,13 @@ type ShowOpeningResponse struct {
 	Message string                  `json: "message"`
 	Data    schemas.OpeningResponse `json: "data"`
 }
+
+type ListOpeningResponse struct {
+	Message string                    `json: "message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
+
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
